stop horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,15 @@
 html, body {
   max-width: 100%;
   max-height: fit-content;
-  overflow-x: hidden;
   touch-action: manipulation;
 }
 
 .app-container {
 	display: flex;
 	flex-direction: column;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .blurred {
