--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -3,9 +3,7 @@
 	flex-direction: column;
 	justify-items: center;
 	align-content: center;
-	min-height: 100vh;
-	max-width: 100%;
-	overflow-x: hidden;
+	height: auto;
 	margin-top: 100px;
 	transition: 0.3s;
 }
